Restructure Java 9 Module System blog post into two logical parts
- Part 1: How modules work (encapsulation, dependencies, reflection)
- Part 2: Module API and runtime introspection

Reorganizes narrative flow for clarity:
- Examples 1-3 demonstrate fundamental concepts without API
- Examples 4-5 demonstrate Module API capabilities
- Adds clear visual separation with section headers
- Maintains all examples, tests, outputs, and key insights

This addresses user feedback to separate 'how it works' from 'how to use API'

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>